# alethic

./: .dockerignore  .gitignore  Dockerfile  From_Fragile_Glue_to_Governed_Cognition.md  MANIFEST.in  README.md  __init__.py  docker-compose.yml  pyproject.toml  run.py
.github/workflows/: ci.yml
agents/: alethic_agent.py  llm_agent.py
alethic/: __init__.py  client.py  kernel.py  schema.py  sqlite_store.py  store.py  store_protocol.py
alethic/api/: app.py  models.py  routes.py
docs/: api-reference.md  architecture.md  benchmark.md  deployment.md  http-api.md  workers.md
docs/superpowers/specs/: 2026-07-16-alethic-dev-design.md
eval/: harness.py
examples/: demo.ipynb  demo.py  multi_episode.py
tests/: conftest.py  helpers.py  test_adaptive_worker.py  test_agent_integration.py  test_agent_llm_mock.py  test_api.py  test_atomicity.py  test_benchmark_invariants.py  test_cli.py  test_client.py  test_concurrency.py  test_coverage_gaps.py  test_e2e_pipeline.py  test_kernel.py  test_migrations.py  test_orchestrator.py  test_permissions.py  test_report.py  test_schema.py  test_session.py  test_sim_worker.py  test_sqlite_store.py  test_store.py  test_store_equivalence.py  test_stress.py  test_validators.py
